Fixed issue with the show template not showing user info

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -19,14 +19,18 @@
 	padding: 3px;
 }
 
+.main-post-text {
+	font-size: 15px;
+}
+
 .secondary-text {
 	margin-top: 2px;
-	font-size: 13px;
+	font-size: 12px;
 }
 
 .bottom-text {
 	margin-top: 5px;
-	font-size: 11px;
+	font-size: 10px;
 }
 
 .options-item {
